# IMSCRIBr

./: .gitignore  13000synthetic.md  GRAMMAR_DERIVATION_OF_GRAVITY_LIFTED.md  IMASM_IG_BRIDGE.md  NEWTON_LIFT_DESIGN.md  ONTOLOGY.md  READING_GUIDE.md  README.md  _fix_else.py  _fix_indent_paren.py  _fix_missing_paren.py  _fix_phase10.py  _fix_phase11.py  _fix_phase12.py  _fix_phase13.py  _fix_phase14.py  _fix_phase2.py  _fix_phase3.py  _fix_phase4.py  _fix_phase5.py  _fix_phase6.py  _fix_phase7.py  _fix_phase8.py  _fix_phase9.py  _fix_scaffold.py  _fix_seq_chain.py  _rewrite_scaffold.py  cfg_dag.py  cfg_dag_momonados.py  cfg_sequences.py  classifier.py  commit.txt  cosmic_breath_newton_lifted.md  cosmic_breath_newton_verified.md  demo_solve_coagula_lifted.md  demo_solve_coagula_lifted_v2.md  engine.py  imas_ig_bridge.py  newton_lift.py  pathway_ledger.json  (+29 more)
docs/: SYMBOLIC_SYSTEM.md
newton_inputs/: collatz_newton_output.md  crystal_compression_lifted.md  crystal_compression_newton_output.md  eml_probe_newton_output.tex  euler_bricks_newton_output.md  iug_newton_output.tex  perfect_cuboid_newton_output.md  perfect_cuboid_newton_output_v2.md  sic_povm_functor_newton_output.tex  sic_povm_newton_output.tex  sic_povm_newton_output_v2.tex  twin_prime_newton_output.md
newton_outputs/: alchemical_synthesis_enhancement_newton.md  cosmic_breath_newton.md  crystal_compression_lifted_v2.md  crystal_compression_lifted_v3.md  crystal_compression_lifted_v4.md  crystal_compression_newton.md  crystal_cosmos_newton.aux  crystal_cosmos_newton.out  crystal_cosmos_newton.tex  (+3 more)
(+12 files in other folders)
