[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imscribr"
version = "1.0.0"
description = "IMASM Arrangement Space Iterator — maps 12^8 = 429,981,696 token arrangements into structural fingerprint classes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Lando⊗⊙perator"},
]
keywords = ["imasim", "imasm", "frobenius", "dialetheia", "structural-grammar", "combinatorics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
imasm-map = "run_map:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = [
    "tokens.py",
    "classifier.py",
    "engine.py",
    "run_map.py",
    "__init__.py",
    "README.md",
    "IMASM_SPACE_MAP_REPORT.md",
]
